--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header id="particles-js">
       <nav>
         <ul>
-          <a href=""><li>About</li></a>
           <a href=""><li>Work</li></a>
+          <a href=""><li>About</li></a>
           <a href=""><li>Contact</li></a>
         </ul>
       </nav>
@@ -23,5 +23,60 @@
       <script src="js/particles.js"></script>
       <script src="js/app.js"></script>
     </header>
+
+    <div id="work">
+      <h2>My Work</h2>
+        <div class="project-grid clearfix">
+
+          <div class="project-block">
+            <div class="project-content">
+              <p>Chicago Hacks</p>
+              <img src="img/chihacks.png" alt="Chicago Hacks">
+            </div>
+          </div>
+
+          <div class="project-block">
+            <div class="project-content">
+              <p>eckels.tech</p>
+              <img src="img/eckelstech.jpg" alt="eckels.tech">
+            </div>
+          </div>
+
+          <div class="project-block">
+            <div class="project-content">
+              <p>Evan Eisenmenger</p>
+              <img src="img/evaneisenmenger.png" alt="Evan Eisenmenger">
+            </div>
+          </div>
+
+          <div class="project-block">
+            <div class="project-content">
+              <p>DIYmatic</p>
+              <img src="img/diymatic.png" alt="DIYmatic">
+            </div>
+          </div>
+
+          <div class="project-block">
+            <div class="project-content">
+              <p>Allergy Assist</p>
+              <img src="img/allergyassist.png" alt="Allergy Assist">
+            </div>
+          </div>
+
+          <div class="project-block">
+            <div class="project-content">
+              <p>Grubyr</p>
+              <img src="img/grubyr.png" alt="Grubyr">
+            </div>
+          </div>
+
+        </div>
+    </div>
+
+
+
+    <!-- <div id="about">
+      <h2>Who I Am</h2>
+    </div> -->
   </body>
 </html>
