--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <title>Evan Eckels</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="js/simplejquery.js"></script>
   </head>
   <body>
     <header id="particles-js">
@@ -17,7 +19,7 @@
       </nav>
         <div class="intro-div">
           <p class="intro-text">Hi, My Name is</p>
-          <h1>Evan Eckels</h1>
+          <h1 id="title">Evan Eckels</h1>
             <p class="desc">I am a web developer from the Chicago-land area who specializes in web development and design, looking to create unique and personalized websites</p>
         </div>
       <script src="js/particles.js"></script>
@@ -75,8 +77,22 @@
 
 
 
-    <!-- <div id="about">
-      <h2>Who I Am</h2>
-    </div> -->
+    <div id="about">
+      <div class="left-div">
+        <h2>Who I Am</h2>
+          <img src="img/evan.jpg" alt="Evan Eckels">
+      </div>
+        <div class="right-div">
+          <p>Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff</p>
+          <div class="dash"></div>
+        </div>
+    </div>
+
+    <div id="contact">
+      <div class="inner-div">
+        <h3>Contact Me</h3>
+          <p>Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff</p>
+      </div>
+    </div>
   </body>
 </html>
