--- a/index.html
+++ b/index.html
@@ -75,24 +75,24 @@
         </div>
     </div>
 
-
-
     <div id="about">
-      <div class="left-div">
-        <h2>Who I Am</h2>
-          <img src="img/evan.jpg" alt="Evan Eckels">
-      </div>
-        <div class="right-div">
-          <p>Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff</p>
-          <div class="dash"></div>
+      <div class="background-div">
+        <div class="encompass clearfix">
+          <div class="left-div">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+
+          <div class="right-div">
+            <img src="img/me.png" alt="Evan Eckels">
+          </div>
         </div>
+      </div>
     </div>
 
     <div id="contact">
-      <div class="inner-div">
-        <h3>Contact Me</h3>
-          <p>Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff Description and stuff</p>
-      </div>
+      <h2>Contact Me</h2>
     </div>
+
   </body>
 </html>
