added updated site

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </ul>
       </nav>
         <div class="intro-div">
-          <p class="intro-text">Hi, My Name is</p>
-          <h1 id="title">Evan Eckels</h1>
-            <p class="desc">I am a web developer from the Chicago-land area who specializes in web development and design, looking to create unique and personalized websites</p>
+          <p class="intro-text" style="display:none">Hi, My Name is</p>
+          <h1 id="title" style="display:none">Evan Eckels</h1>
+            <p class="desc" style="display:none">I am a web developer from the Chicago-land area who specializes in web development and design, looking to create unique and personalized websites</p>
         </div>
       <script src="js/particles.js"></script>
       <script src="js/app.js"></script>
@@ -31,44 +31,44 @@
         <div class="project-grid clearfix">
 
           <div class="project-block">
-            <div class="project-content">
+            <div class="project-content" id="chicagohacks">
               <p>Chicago Hacks</p>
-              <img src="img/chihacks.png" alt="Chicago Hacks">
+              <img src="img/chihacks.png" alt="Chicago Hacks" id="chicagohacksimg">
             </div>
           </div>
 
           <div class="project-block">
-            <div class="project-content">
+            <div class="project-content" id="eckelstech">
               <p>eckels.tech</p>
-              <img src="img/eckelstech.jpg" alt="eckels.tech">
+              <img src="img/eckelstech.jpg" alt="eckels.tech" id="eckelstechimg">
             </div>
           </div>
 
           <div class="project-block">
-            <div class="project-content">
+            <div class="project-content" id="evaneisenmenger">
               <p>Evan Eisenmenger</p>
-              <img src="img/evaneisenmenger.png" alt="Evan Eisenmenger">
+              <img src="img/evaneisenmenger.png" alt="Evan Eisenmenger" id="evaneisenmengerimg">
             </div>
           </div>
 
           <div class="project-block">
-            <div class="project-content">
+            <div class="project-content" id="diymatic">
               <p>DIYmatic</p>
-              <img src="img/diymatic.png" alt="DIYmatic">
+              <img src="img/diymatic.png" alt="DIYmatic" id="diymaticimg">
             </div>
           </div>
 
           <div class="project-block">
-            <div class="project-content">
+            <div class="project-content" id="allergyassist">
               <p>Allergy Assist</p>
-              <img src="img/allergyassist.png" alt="Allergy Assist">
+              <img src="img/allergyassist.png" alt="Allergy Assist" id="allergyassistimg">
             </div>
           </div>
 
           <div class="project-block">
-            <div class="project-content">
+            <div class="project-content" id="grubyr">
               <p>Grubyr</p>
-              <img src="img/grubyr.png" alt="Grubyr">
+              <img src="img/grubyr.png" alt="Grubyr" id="grubyrimg">
             </div>
           </div>
 
